# Python

./: .gitignore  README.md
Adzuna/: README.md  adzuna.py
Class-practice/: README.md  classes.py  game.py
Event-Viewer-standalone-app/: README.md  event-viewer.py  event-viewer.ui  main.py  pyproject.toml  requirements.txt
GoogleNewWebscraper/: GoogleNewsWebscraper.py  README.md
LanguageLearningApp/: README.md  languagelearning.py
Mad Libs Game/: README.md  madlibs.py
Networking-Tools/: README.md  networking-tools.py
OMDB/: README.md  omdb.py
Playwright/: README.md
WeatherChecker/: README.md
csv-to-db-project/: BACKUP_entra-csv-to-db.ui  README.md  entra-csv-to-db.py  entra-csv-to-db.ui  main.py  pyproject.toml  test.csv  test2.csv
dictionaries/: README.md  data.py  main.py  nested_dictionary.py  pyproject.toml
entra-id-graph/: entra-graph.py  entra-graph.spec  entra-graph.ui  entra.py  requirements.txt
google-news-checker/: GoogleNewsWebscraper.py
job-search-UK/: README.md
language-learning-app/: languagelearning.py  wordlist.py
machine-learning/: README.md  UKBMWData.py  california_housing_prices.py  pyproject.toml
mad-libs-game/: README.md
octopus-energy-tracker/: octopus.py
pandas-project/: README.md  visualisation.py
playwright-project/: README.md  designer.py  requirements.txt  scrape.py
reddit-video-downloader-project/: README.md  class-reddit-api.py  reddit_api.py  requirements.txt
steam-game-deals-checker/: README.md  cheapshark.py
terraform-builder/: README.md  TerraformTemplate.ui  VPNConfig.ui  main.py  (+1 more)
(+1 files in other folders)
