[project]
name = "event-viewer-standalone-app"
version = "0.1.0"
description = "Event Viewer app project toml file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyQt5==5.15.11,"
    "PyQt5-Qt5==5.15.2",
    "PyQt5_sip==12.17.0",
    "PyQt5Designer==5.14.1",
    "pywin32==310"
]
