[project]
name = "csv-to-db-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pyside6>=6.9.1",
    "pyside6-addons>=6.9.1",
    "pyside6-essentials>=6.9.1",
    "ruff>=0.12.7",
]
